--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>Whatsapp-clone</Whatsapp-clone></title>
+    <title>Whatsapp-clone</title>
   </head>
   <body>
     
